<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sweng.swatcher.fragment.ConnectionSettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorControlHighlight"
                android:layout_marginTop="20dp"
                android:paddingLeft="5dp">

                <TextView
                    android:text="PICTURES SETTINGS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="5dp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="Quality Image (1-100)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/quality_image" />

                <TextView
                    android:text="Picture Type (jpg or ppm)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/picture_type"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorControlHighlight"
                android:layout_marginTop="30dp"
                android:paddingLeft="5dp">

                <TextView
                    android:text="DETECTION SETTINGS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="5dp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:text="Record movie on detection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp" />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_switch"
                    android:text=" " />

                <TextView
                    android:text="Max Movie Time in seconds (1-60)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/max_movie_time" />

                <TextView
                    android:text="Snapshot on detection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView14"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/snapshot_spinner" />

                <TextView
                    android:text="Threshold in pixel (250-18000)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/threshold" />

                <TextView
                    android:text="Continuos Snapshot Interval (0 disabled)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:elevation="9dp"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/snapshot_interval" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:fabSize="normal"
                    app:srcCompat="@android:drawable/ic_popup_sync"
                    android:id="@+id/update_ms_button"
                    android:layout_marginLeft="96dp"
                    android:layout_marginStart="96dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:fabSize="normal"
                    app:srcCompat="@android:drawable/ic_menu_save"
                    android:id="@+id/save_ms_button"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/update_ms_button"
                    android:layout_toEndOf="@+id/update_ms_button"
                    android:layout_marginLeft="68dp"
                    android:layout_marginStart="68dp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
